@@ -131,7 +131,8 @@ def evalcontextfunction(f):
     """This decoraotr can be used to mark a function or method as an eval
     context callable.  This is similar to the :func:`contextfunction`
     but instead of passing the context, an evaluation context object is
-    passed.
+    passed.  For more information about the eval context, see
+    :ref:`eval-context`.
 
     .. versionadded:: 2.4
     """
